#######################################################################
# This file is a part of SkyTools
#
# Sky Tools
# Copyright (C) 2023  Shamik Ghosh
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#
# For more information about SkyTools please visit 
# <https://github.com/1cosmologist/skytools> or contact Shamik Ghosh 
# at shamik@lbl.gov
#
#########################################################################

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'skytools'
version = '0.0.1.a6'
description = 'Python version of PSM tools for CMB data analysis.'
readme = 'README.md'
requires-python = '>=3.9'
dependencies = [
    "astropy",
    "healpy>=1.16.0",
    "numpy",
    "scipy",
    "joblib",
]
license = {file = 'LICENSE.txt'}
authors = [
  {name = 'Shamik Ghosh', email = 'shamik@lbl.gov'},
  {name = 'Jacques Delabrouille', email = 'jdelabrouille@lbl.gov'}
]
